--- a/.config/nginx/MLHC.conf
+++ b/.config/nginx/MLHC.conf
@@ -1,3 +1,4 @@
+# HTTP
 server {
     listen 80;
     server_name 2021-capstone-mlhc.tk 133.186.229.71;
@@ -11,4 +12,28 @@ server {
     location /static/ {
         alias /home/32152428.JH/project/MLHC/static/;
     }
+}
+
+# HTTPS
+server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        ssl on;
+        server_name 2021-capstone-mlhc.tk;
+
+        ssl_certificate /etc/letsencrypt/live/2021-capstone-mlhc.tk/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/2021-capstone-mlhc.tk/privkey.pem;
+
+
+        location / {
+                #include proxy_params;
+                #proxy_pass 133.186.229.71:8000;
+                uwsgi_pass  unix:///tmp/MLHC.sock;
+                include     uwsgi_params;
+        }
+
+        location /static/ {
+            alias /home/32152428.JH/project/MLHC/static/;
+        }
+
 }
