--- a/.config/nginx/MLHC.conf
+++ b/.config/nginx/MLHC.conf
@@ -5,13 +5,16 @@ server {
     charset utf-8;
     client_max_body_size 128M;
 
-    location / {
-        uwsgi_pass  unix:///tmp/MLHC.sock;
-        include     uwsgi_params;
-    }
-    location /static/ {
-        alias /home/32152428.JH/project/MLHC/static/;
-    }
+    return 301 HTTPS://$server_name$request_uri;
+
+#    location / {
+#        uwsgi_pass  unix:///tmp/MLHC.sock;
+#        include     uwsgi_params;
+#    }
+#    location /static/ {
+#        alias /home/32152428.JH/project/MLHC/static/;
+#    }
+
 }
 
 # HTTPS
